--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Index page</title>
 </head>
 <body>
+    <h1>This is a heading</h1>
     <p>This is my paragraph content</p>
 </body>
 </html>
