fixed a few errors and now done with project4
fixed a few errors and now done with project4

--- a/Little_Patrick_Project4/index.html
+++ b/Little_Patrick_Project4/index.html
@@ -179,9 +179,9 @@
 
 
     <label for="advice">Advice:</label> <!--label advice-->
-    <textarea id="advice" name="advice"> <!--start textarea-->
+    <textarea id="advice" name="advice">
         Any advice?
-    </textarea><br /> <!--end textarea-->
+    </textarea><br /><!----end textarea---->
 
     Whats your favorite thing about the website?: <!----whats your favorite thing about the website-->
     <input id="color" type="radio" name="genre" value="color" checked="checked" required="required" /><!--input color--->
